...
        title = String(localized: "imageDetailsView_title", comment: "Properties")
        
        // Buttons
        let cancel = UIBarButtonItem(barButtonSystemItem: .close, target: self, action: #selector(cancelEdit))
        cancel.accessibilityIdentifier = "cancelEdit"
        let done = UIBarButtonItem(barButtonSystemItem: .save, target: self, action: #selector(doneEdit))
        done.accessibilityIdentifier = "Done"
        
        // Navigation bar
        navigationController?.isNavigationBarHidden = false
        navigationItem.leftBarButtonItem = cancel
        navigationItem.rightBarButtonItem = done
        navigationController?.navigationBar.accessibilityIdentifier = "editParams"
...
            }
            let tagIDs: String = tags.map({"\($0.pwgID),"}).reduce("", +)
            paramsDict["tag_ids"] = String(tagIDs.dropLast(1))
        }
        
        // Update image description?
        /// token required for updating HTML in title/comment
        if shouldUpdateComment {
            paramsDict["comment"] = commonComment.utf8mb3Encoded
            paramsDict["pwg_token"] = ServerVars.shared.pwgToken
        }
        
        return paramsDict
...
